# neko-engine

./: CMakeLists.txt  README.md  README.org  build.sh  imgui.ini  run.sh
.cache/clangd/index/: Buffer.cpp.491324039221A903.idx  Buffer.h.249D5035C6DA9EF1.idx  Event.h.3FCB33DAC3B1B1D0.idx  GraphicsContext.h.90635BD4A27CCD81.idx  NPCH.h.D27B7ED573CC9849.idx  OpenGLRendererAPI.cpp.D8FDBFE3C7FCA801.idx  OpenGLRendererAPI.h.50D4CC9D78ECC041.idx  OpenGLTexture.cpp.D5831DC2562D401D.idx  OpenGLTexture.h.80296901A62B255F.idx  OpenGLVertexArray.cpp.0CD6AC2FD1B70DE1.idx  OpenGLVertexArray.h.AED45F1D7AB86786.idx  OpenGlBuffer.cpp.4CC5A9D49C3C3949.idx  OpenGlBuffer.h.9FB73E1A1EF9CEDF.idx  OpenGlContext.cpp.00923EF94B2435C6.idx  OpenGlContext.cpp.B35024B11D5C4BD3.idx  OpenGlContext.h.082669AE3511839C.idx  OpenGlContext.h.33EEC9D93366BE9F.idx  OpenGlShadder.cpp.A172156B4B8762E8.idx  OpenGlShadder.h.CF7193370C0AD4E8.idx  OrthographiCameraController.cpp.D376F768A98A3B46.idx  OrthographiCameraController.h.A76F45504C59ABF9.idx  OrthographicCamera.cpp.F82E6686940BECD4.idx  OrthographicCamera.h.A6F0068BDF6DE35F.idx  RenderCommand.cpp.C2B941E83B2F871D.idx  RenderCommand.h.4586E224E8109DF5.idx  RendererAPI.cpp.F3B516D62F78AF02.idx  RendererAPI.h.54DA6EC815D5B540.idx  SandBox2D.cpp.980403DAE5DBC9F8.idx  SandBox2D.h.EF21C3FEC7960082.idx  Texture.cpp.EE99707C2C2229AB.idx  Texture.h.486EBE244BAE3721.idx  Timestep.h.EE3A5F1ADA08616D.idx  VertexArray.cpp.1E5A96F58DF690F3.idx  VertexArray.h.A2EC45B5EE1EBE80.idx  _fixes.hpp.83B005E262D39F0C.idx  _vectorize.hpp.B3CE4227F7FF04C4.idx  ansicolor_sink-inl.h.8104396CB81E444C.idx  ansicolor_sink.h.3003E5CF8C8C9625.idx  app.cpp.5D0CD9FE6C5CE1B3.idx  app.h.90F8BB573CCB065D.idx  (+316 more)
app/: CMakeLists.txt  SandBox2D.cpp  SandBox2D.h  s_app.cpp
app/assets/shaders/: FlatColor.glsl
neko/: CMakeLists.txt
neko/src/: NPCH.h  neko.h
neko/src/neko/: Assert.h  OrthographiCameraController.cpp  OrthographiCameraController.h  app.cpp  app.h  core.h  epoint.h  input.h  kc.h  keycodes.h  layer.cpp  layer.h  layerstack.cpp  layerstack.h  log.cpp  log.h  mousecodes.h  window.h  winwindows.cpp  winwindows.h
neko/src/neko/Events/: Event.h  appE.h  keyE.h  mouseE.h
neko/src/neko/core/: Timestep.h
neko/src/neko/imgui/: imgui_build.cpp  imgui_layer.cpp  imgui_layer.h
neko/src/neko/platform/opengl/: OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h  OpenGlBuffer.cpp  OpenGlBuffer.h  OpenGlContext.cpp  OpenGlContext.h  OpenGlShadder.cpp  OpenGlShadder.h  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h
neko/src/neko/platform/windows/: wininput.cpp  wininput.h
neko/src/neko/renderer/: Buffer.cpp  Buffer.h  GraphicsContext.h  OrthographicCamera.cpp  OrthographicCamera.h  RenderCommand.cpp  RenderCommand.h  RendererAPI.cpp  RendererAPI.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  renderer.cpp  renderer.h  renderer2D.cpp  renderer2D.h  shader.cpp  shader.h
